// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render alert success variant 1`] = `
<div>
  <div
    class="fade d-flex flex-column align-items-center alert alert-success show"
    role="alert"
  >
    <div
      class="alert-heading h4"
    >
      Zamówienie Przyjęte
    </div>
    <p>
      Twoje zamówienie zostało przyjęte do realizacji.
    </p>
    <a
      class="nav-link"
      href="/"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        POWRÓT DO SKLEPU
      </button>
    </a>
  </div>
</div>
`;

exports[`should render alert warning variant 1`] = `
<div>
  <div
    class="fade d-flex flex-column align-items-center alert alert-danger show"
    role="alert"
  >
    <div
      class="alert-heading h4"
    >
      Błąd zamówienia
    </div>
    <p>
      Error message
    </p>
    <button
      class="btn btn-primary"
      type="button"
    >
      ZAMKNIJ
    </button>
  </div>
</div>
`;
